# mariana-music-player

./: .gitignore  Future Ideas and Issues to Address.md  Future Ideas.md  INITSETUP.py  INSTALLATION.py  Music Player Help.xlsx  Music Player.py  MusicDecoding.py  README.md  banner.banner  console_settings.py  curses_renderer.py  demosongs.demo  display_songs.py  downgrade.txt  features.personal  features_.personal  features__.personal  first_boot_setup.py  first_boot_welcome_screen.py  help.md  help_future.md  idle-in-venv.bat  lib.lib  logger.py  main.py  main2.py  meta_getter.py  progress_dispay.py  project_flow.md  pyproject.toml  readme.md  requirements.txt  restore_default.py  runner.bat  runner.ps1  search_songs.py  setup.personal  test.yml  test1.py  (+4 more)
about/: about.info
beta/: IPrint.py  YT_query.py  master_volume_control.py  mediadl.py  podcasts.py  radio_weblinks.yml  redditsessions.py  vlc-async-stream.py  yt_urls.yml
lyrics_provider/: detect_song.py  get_lyrics.py  get_related_music.py  lyrics_view_window.py  lyrics_window_spawn.py
res/: banner.banner  default.css  style.css
settings/: config.yml  config.yml.default  settings.yml  settings.yml.default  system.toml  users.yml
similar_songs_remover/: remove-similar.py  similarsongs.csv
src/: INSTALLATION.py  first_boot_setup.py  logger.py  main.py  restore_default.py  utils.py
src/beta/: IPrint.py  YT_query.py  master_volume_control.py  redditsessions.py  vlc-async-stream.py
src/lyrics_provider/: detect_song.py  lyrics_view_window.py
user/: reddit_credentials.json  user_data.yml
(+3 files in other folders)
